update to X-Pack 5.6.3